@@ -1,15 +1,16 @@
-package com.foru.freebe.common.service;
+package com.foru.freebe.s3;
 
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.UUID;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
@@ -31,17 +32,38 @@ import lombok.RequiredArgsConstructor;
 @Service
 @RequiredArgsConstructor
 public class S3ImageService {
-    private static final int THUMBNAIL_SIZE = 200;
-
     private final AmazonS3 amazonS3;
 
-    @Value("${AWS_S3_BUCKET}")
+    @Value("${cloud.aws.s3.bucket}")
     private String bucketName;
 
-    public List<String> uploadOriginalImage(List<MultipartFile> images) throws IOException {
+    @Value("${cloud.aws.s3.base-path.original}")
+    private String originPath;
+
+    @Value("${cloud.aws.s3.base-path.thumbnail}")
+    private String thumbnailPath;
+
+    @Value("${cloud.aws.s3.base-path.photographer}")
+    private String photographerPath;
+
+    @Value("${cloud.aws.s3.base-path.customer}")
+    private String customerPath;
+
+    @Value("${cloud.aws.s3.base-path.product}")
+    private String productPath;
+
+    @Value("${cloud.aws.s3.base-path.profile}")
+    private String profilePath;
+
+    @Value("${cloud.aws.s3.base-path.reservation}")
+    private String reservationPath;
+
+    public List<String> uploadOriginalImages(List<MultipartFile> images, S3ImageType s3ImageType, Long memberId) throws
+        IOException {
+
         List<String> originalImageUrls = new ArrayList<>();
         for (MultipartFile image : images) {
-            String originKey = "origin/" + image.getOriginalFilename();
+            String originKey = generateImagePath(image, s3ImageType, memberId, true);
 
             ObjectMetadata metadata = new ObjectMetadata();
             metadata.setContentLength(image.getSize());
@@ -53,27 +75,58 @@ public class S3ImageService {
         return originalImageUrls;
     }
 
-    public List<String> uploadThumbnailImage(List<MultipartFile> images) throws IOException {
+    public List<String> uploadThumbnailImages(List<MultipartFile> images, S3ImageType s3ImageType, Long memberId,
+        int thumbnailSize) throws IOException {
+
         List<String> thumbnailImageUrls = new ArrayList<>();
         for (MultipartFile image : images) {
-            String thumbnailKey = "thumbnail/" + image.getOriginalFilename();
+            String thumbnailKey = generateImagePath(image, s3ImageType, memberId, false);
             InputStream originalImageStream = image.getInputStream();
 
             ByteArrayOutputStream thumbnailOutputStream = new ByteArrayOutputStream();
             Thumbnails.of(originalImageStream)
-                .size(THUMBNAIL_SIZE, THUMBNAIL_SIZE)
+                .size(thumbnailSize, thumbnailSize)
                 .toOutputStream(thumbnailOutputStream);
 
             InputStream thumbnailInputStream = new ByteArrayInputStream(thumbnailOutputStream.toByteArray());
 
-            String contentType = image.getContentType();
             ObjectMetadata thumbnailMetadata = new ObjectMetadata();
-            thumbnailMetadata.setContentType(contentType);
+            thumbnailMetadata.setContentType(image.getContentType());
 
             uploadToS3(thumbnailKey, thumbnailInputStream, thumbnailMetadata);
             addImageUrlFromS3(thumbnailKey, thumbnailImageUrls);
         }
         return thumbnailImageUrls;
+    }
+
+    // TODO 추후 수정 및 삭제 API 티켓에서 사용할 예정
+    public void deleteImageFromS3(String imageAddress) {
+        String key = getKeyFromImageAddress(imageAddress);
+        try {
+            amazonS3.deleteObject(new DeleteObjectRequest(bucketName, key));
+        } catch (AmazonS3Exception e) {
+            throw new RestApiException(AwsErrorCode.AMAZON_S3_EXCEPTION);
+        } catch (AmazonServiceException e) {
+            throw new RestApiException(AwsErrorCode.AMAZON_SERVICE_EXCEPTION);
+        } catch (Exception e) {
+            throw new RestApiException(CommonErrorCode.INTERNAL_SERVER_ERROR);
+        }
+    }
+
+    private String generateImagePath(MultipartFile image, S3ImageType s3ImageType, Long memberId, Boolean isOrigin) {
+        String fileName = image.getOriginalFilename();
+        String uniqueId = UUID.randomUUID().toString();
+        String imageType = isOrigin ? originPath : thumbnailPath;
+
+        String basePath;
+        switch (s3ImageType) {
+            case PRODUCT -> basePath = photographerPath + memberId + productPath;
+            case PROFILE -> basePath = photographerPath + memberId + profilePath;
+            case RESERVATION -> basePath = customerPath + memberId + reservationPath;
+            default -> throw new RestApiException(CommonErrorCode.INTERNAL_SERVER_ERROR);
+        }
+
+        return basePath + imageType + uniqueId + fileName;
     }
 
     private void uploadToS3(String key, InputStream imageInputStream, ObjectMetadata metadata) {
@@ -93,26 +146,12 @@ public class S3ImageService {
         originalImageUrls.add(imageUrl);
     }
 
-    // TODO 추후 수정 및 삭제 API 티켓에서 사용할 예정
-    public void deleteImageFromS3(String imageAddress) {
-        String key = getKeyFromImageAddress(imageAddress);
-        try {
-            amazonS3.deleteObject(new DeleteObjectRequest(bucketName, key));
-        } catch (AmazonS3Exception e) {
-            throw new RestApiException(AwsErrorCode.AMAZON_S3_EXCEPTION);
-        } catch (AmazonServiceException e) {
-            throw new RestApiException(AwsErrorCode.AMAZON_SERVICE_EXCEPTION);
-        } catch (Exception e) {
-            throw new RestApiException(CommonErrorCode.INTERNAL_SERVER_ERROR);
-        }
-    }
-
     private String getKeyFromImageAddress(String imageAddress) {
         try {
             URL url = new URL(imageAddress);
-            String decodingKey = URLDecoder.decode(url.getPath(), "UTF-8");
+            String decodingKey = URLDecoder.decode(url.getPath(), StandardCharsets.UTF_8);
             return decodingKey.substring(1); // 맨 앞의 '/' 제거
-        } catch (MalformedURLException | UnsupportedEncodingException e) {
+        } catch (MalformedURLException e) {
             throw new RestApiException(CommonErrorCode.IO_EXCEPTION);
         }
     }
